--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "cleanUrls": true,
+  "trailingSlash": false,
   "rewrites": [
-    { "source": "/notaire", "destination": "/src/pages/notaire.html" },
-    { "source": "/ik", "destination": "/src/pages/ik.html" },
-    { "source": "/ponts", "destination": "/src/pages/ponts.html" },
-    { "source": "/taxe", "destination": "/src/pages/taxe.html" },
-    { "source": "/travail", "destination": "/src/pages/travail.html" }
+    { "source": "/pages/notaire.html", "destination": "/pages/notaire.html" },
+    { "source": "/pages/pret.html", "destination": "/pages/pret.html" },
+    { "source": "/pages/plusvalue.html", "destination": "/pages/plusvalue.html" },
+    { "source": "/pages/charges.html", "destination": "/pages/charges.html" },
+    { "source": "/pages/ik.html", "destination": "/pages/ik.html" },
+    { "source": "/pages/ponts.html", "destination": "/pages/ponts.html" },
+    { "source": "/pages/taxe.html", "destination": "/pages/taxe.html" },
+    { "source": "/pages/travail.html", "destination": "/pages/travail.html" }
   ]
 }
