Ajout du calculateur plus-value crypto & bourse - Nouveau calculateur pour crypto et actions avec fiscalité FR 2025 - Flat tax 30% et abattements durée de détention - Support Bitcoin, Ethereum, CAC 40, ETF - Interface complète avec FAQ et validation - Configuration build et sitemap mis à jour

--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,8 @@
     { "source": "/pages/ik.html", "destination": "/pages/ik.html" },
     { "source": "/pages/ponts.html", "destination": "/pages/ponts.html" },
     { "source": "/pages/taxe.html", "destination": "/pages/taxe.html" },
-    { "source": "/pages/travail.html", "destination": "/pages/travail.html" }
+    { "source": "/pages/travail.html", "destination": "/pages/travail.html" },
+    { "source": "/pages/financement.html", "destination": "/pages/financement.html" },
+    { "source": "/pages/crypto-bourse.html", "destination": "/pages/crypto-bourse.html" }
   ]
 }
