feat: TOP 5 SEO homepage + Plus-Value PDF export + remove watermark

--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,13 @@
     { "source": "/pages/ponts.html", "destination": "/pages/ponts.html" },
     { "source": "/pages/taxe.html", "destination": "/pages/taxe.html" },
     { "source": "/pages/travail.html", "destination": "/pages/travail.html" },
-    { "source": "/pages/financement.html", "destination": "/pages/financement.html" },
-    { "source": "/pages/crypto-bourse.html", "destination": "/pages/crypto-bourse.html" }
+    {
+      "source": "/pages/financement.html",
+      "destination": "/pages/financement.html"
+    },
+    {
+      "source": "/pages/crypto-bourse.html",
+      "destination": "/pages/crypto-bourse.html"
+    }
   ]
 }
