--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2"
+  },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "autoprefixer": "^10.4.16",
