--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate:blog": "node scripts/generate-departement-articles.js"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2"
   },
