--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,9 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "rewrites": [
-    { "source": "/pages/notaire.html", "destination": "/pages/notaire.html" },
-    { "source": "/pages/pret.html", "destination": "/pages/pret.html" },
+  "redirects": [
     {
-      "source": "/pages/plusvalue.html",
-      "destination": "/pages/plusvalue.html"
-    },
-    { "source": "/pages/charges.html", "destination": "/pages/charges.html" },
-    { "source": "/pages/ik.html", "destination": "/pages/ik.html" },
-    { "source": "/pages/ponts.html", "destination": "/pages/ponts.html" },
-    { "source": "/pages/taxe.html", "destination": "/pages/taxe.html" },
-    { "source": "/pages/travail.html", "destination": "/pages/travail.html" },
-    {
-      "source": "/pages/financement.html",
-      "destination": "/pages/financement.html"
-    },
-    {
-      "source": "/pages/crypto-bourse.html",
-      "destination": "/pages/crypto-bourse.html"
+      "source": "/pages/blog/frais-notaire-:code.html",
+      "destination": "/pages/blog/departements/frais-notaire-:code.html",
+      "permanent": true
     }
   ]
 }
