fix(sitemap): normaliser toutes les URLs en apex (sans www) pour éviter les boucles de redirection; ajouter script de normalisation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build && node scripts/copy-seo-pages.js",
     "preview": "vite preview",
     "generate:blog": "node scripts/generate-departement-articles.js",
-    "indexing:publish": "node scripts/publish-indexing.js --from-sitemap"
+    "indexing:publish": "node scripts/publish-indexing.js --from-sitemap",
+    "sitemap:normalize": "node scripts/normalize-sitemap-domain.js"
   },
   "dependencies": {
     "chart.js": "^4.5.1",
