fix(vercel): supprimer les règles de redirection pour servir les URLs réelles sans boucle

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,3 @@
 {
-  "redirects": [
-    {
-      "source": "/pages/blog/frais-notaire-:code.html",
-      "destination": "/pages/blog/departements/frais-notaire-:code.html",
-      "permanent": true
-    },
-    {
-      "source": "/pages/blog/departements/frais-notaire-departements.html",
-      "destination": "/pages/blog/frais-notaire-departements.html",
-      "permanent": true
-    }
-  ]
+  "redirects": []
 }
